--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    implementation "androidx.room:room-runtime:2.0.0"
+    implementation "androidx.room:room-rxjava2:2.0.0"
 }
 repositories {
     mavenCentral()
