--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.team.TeamsActivity"/>
+        <activity android:name=".ui.teamdetail.TeamDetailActivity"/>
     </application>
 
 </manifest>
