--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,12 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    androidExtensions {
+        experimental = true
+    }
+
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
