--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -12,7 +13,6 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -68,7 +68,7 @@ dependencies {
     testImplementation 'androidx.test:core:1.0.0'
     testImplementation 'android.arch.core:core-testing:1.1.1'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-
+    androidTestImplementation 'androidx.test:rules:1.3.0'
 }
 repositories {
     mavenCentral()
