--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.team.TeamsActivity"/>
-        <activity android:name=".ui.teamdetail.TeamDetailActivity"/>
+        <activity android:name=".view.team.TeamsActivity"/>
+        <activity android:name=".view.teamdetail.TeamDetailActivity"/>
     </application>
 
 </manifest>
